@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***	Add SigParser->new(use_vars=>0) option to speed parsing.
 
+***	Add Verilog::Preproc::getall to fetch all text instead of line-by-line.
+
 ***	Several internal speedups to vhier and Verilog::Netlist.
 
 ****	Fix deep defines causing flex scanner overflows. [Brad Dobbie]
